--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 		<div id="menu">
 			<ul>
 				<li class="current_page_item"><a href="#" accesskey="1" title="">Homepage</a></li>
-				<li><a href="#" accesskey="2" title="">Our Clients</a></li>
-				<li><a href="#" accesskey="3" title="">About Us</a></li>
-				<li><a href="#" accesskey="4" title="">Careers</a></li>
+				<li><a href="#" accesskey="2" title="">About Me</a></li>
+				<li><a href="#" accesskey="4" title="">Projects</a></li>
+				<li><a href="#" accesskey="3" title="">Experience</a></li>
 				<li><a href="#" accesskey="5" title="">Contact Us</a></li>
 			</ul>
 		</div>
