--- a/index.html
+++ b/index.html
@@ -29,15 +29,11 @@
 		</div>
 	</div>
 	<div id="main">
-		<div id="banner">
-			<img src="images/pic01.jpg" alt="" class="image-full" />
-		</div>
-		<div id="welcome">
+		<div id="about-me">
 			<div class="title">
-				<h2>Fusce ultrices fringilla metus</h2>
-				<span class="byline">Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue</span>
+				<h2>Nishant Sahoo</h2>
+				<span class="byline">Software developer. Musician. Photographer.</span>
 			</div>
-			<p>This is <strong>Privy</strong>, a free, fully standards-compliant CSS template designed by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. The photos in this template are from <a href="http://fotogrph.com/"> Fotogrph</a>. This free template is released under the <a href="http://templated.co/license">Creative Commons Attribution</a> license, so you're pretty much free to do whatever you want with it (even use it commercially) provided you give us credit for it. Have fun :) </p>
 			<ul class="actions">
 				<li><a href="#" class="button">Etiam posuere</a></li>
 			</ul>
