--- a/index.html
+++ b/index.html
@@ -20,29 +20,27 @@
 		</div>
 		<div id="menu">
 			<ul>
-				<li class="current_page_item"><a href="#" accesskey="1" title="">Homepage</a></li>
-				<li><a href="#" accesskey="2" title="">About Me</a></li>
-				<li><a href="#" accesskey="4" title="">Projects</a></li>
+				<li><a href="#description" accesskey="2" title="">About Me</a></li>
+				<li><a href="#about-me" accesskey="4" title="">Projects</a></li>
 				<li><a href="#" accesskey="3" title="">Experience</a></li>
 				<li><a href="#" accesskey="5" title="">Contact Us</a></li>
 			</ul>
 		</div>
 	</div>
 	<div id="main">
-		<div id="about-me">
+		<div id="description">
 			<div class="title">
-				<h2>Nishant Sahoo</h2>
+				<h1>Nishant Sahoo</h1>
 				<span class="byline">Software developer. Musician. Photographer.</span>
 			</div>
-			<ul class="actions">
-				<li><a href="#" class="button">Etiam posuere</a></li>
-			</ul>
+
 		</div>
-		<div id="featured">
-			<div class="title">
-				<h2>Maecenas lectus sapien</h2>
+		<!-- div id="about-me">
+			<div class="titleB">
+				<h1>About Me</h1>
 				<span class="byline">Integer sit amet aliquet pretium</span>
 			</div>
+		</div> -->
 			<ul class="style1">
 				<li class="first">
 					<p class="date"><a href="#">Jan<b>05</b></a></p>
