--- a/index.html
+++ b/index.html
@@ -22,25 +22,26 @@
 			<ul>
 				<li><a href="#description" accesskey="2" title="">About Me</a></li>
 				<li><a href="#about-me" accesskey="4" title="">Projects</a></li>
-				<li><a href="#" accesskey="3" title="">Experience</a></li>
+				<li><a href="#experience" accesskey="3" title="">Experience</a></li>
 				<li><a href="#" accesskey="5" title="">Contact Us</a></li>
 			</ul>
 		</div>
 	</div>
 	<div id="main">
 		<div id="description">
-			<div class="title">
+			<div class="titleH">
 				<h1>Nishant Sahoo</h1>
 				<span class="byline">Software developer. Musician. Photographer.</span>
 			</div>
-
 		</div>
-		<!-- div id="about-me">
-			<div class="titleB">
+		<div id="about-me">
+			<div class="titleH">
 				<h1>About Me</h1>
-				<span class="byline">Integer sit amet aliquet pretium</span>
+				<span class="byline">Bla bla bla bla bla</span>
 			</div>
-		</div> -->
+		</div>
+		<div id="experience">
+			<h1>Experience</h1>
 			<ul class="style1">
 				<li class="first">
 					<p class="date"><a href="#">Jan<b>05</b></a></p>
