--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
 		</div>
 		<div id="menu">
 			<ul>
-				<li><a href="#description" accesskey="2" title="">About Me</a></li>
-				<li><a href="#about-me" accesskey="4" title="">Projects</a></li>
+				<li><a href="#projects" accesskey="4" title="">Projects</a></li>
 				<li><a href="#experience" accesskey="3" title="">Experience</a></li>
-				<li><a href="#" accesskey="5" title="">Contact Us</a></li>
+				<li><a href="#" accesskey="5" title="">Contact Me</a></li>
 			</ul>
 		</div>
 	</div>
@@ -32,12 +31,6 @@
 			<div class="titleH">
 				<h1>Nishant Sahoo</h1>
 				<span class="byline">Software developer. Musician. Photographer.</span>
-			</div>
-		</div>
-		<div id="about-me">
-			<div class="titleH">
-				<h1>About Me</h1>
-				<span class="byline">Bla bla bla bla bla</span>
 			</div>
 		</div>
 		<div id="experience">
@@ -66,7 +59,6 @@
 			</ul>
 		</div>
 		<div id="copyright">
-			<span>&copy; Untitled. All rights reserved. | Photos by <a href="http://fotogrph.com/">Fotogrph</a></span>
 			<span>Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</span>
 		</div>
 	</div>
