--- a/index.html
+++ b/index.html
@@ -26,13 +26,42 @@
 			</ul>
 		</div>
 	</div>
+
 	<div id="main">
+
 		<div id="description">
 			<div class="titleH">
 				<h1>Nishant Sahoo</h1>
 				<span class="byline">Software developer. Musician. Photographer.</span>
 			</div>
 		</div>
+
+		<div id="projects">
+			<h1>Projects</h1>
+			<ul class="style1">
+				<li class="first">
+					<p class="date"><a href="#">Jan<b>05</b></a></p>
+					<h3>Amet sed volutpat mauris</h3>
+					<p><a href="#">Consectetuer adipiscing elit. Nam pede erat, porta eu, lobortis eget, tempus et, tellus. Etiam neque. Vivamus consequat lorem at nisl. Nullam non wisi a sem semper eleifend. Etiam non felis. Donec ut ante.</a></p>
+				</li>
+				<li>
+					<p class="date"><a href="#">Jan<b>03</b></a></p>
+					<h3>Sagittis diam dolor amet</h3>
+					<p><a href="#">Etiam non felis. Donec ut ante. In id eros. Suspendisse lacus turpis, cursus egestas at sem. Mauris quam enim, molestie. Donec leo, vivamus fermentum nibh in augue praesent congue rutrum.</a></p>
+				</li>
+				<li>
+					<p class="date"><a href="#">Jan<b>01</b></a></p>
+					<h3>Amet sed volutpat mauris</h3>
+					<p><a href="#">Consectetuer adipiscing elit. Nam pede erat, porta eu, lobortis eget, tempus et, tellus. Etiam neque. Vivamus consequat lorem at nisl. Nullam non wisi a sem semper eleifend. Etiam non felis. Donec ut ante.</a></p>
+				</li>
+				<li>
+					<p class="date"><a href="#">Dec<b>31</b></a></p>
+					<h3>Sagittis diam dolor amet</h3>
+					<p><a href="#">Etiam non felis. Donec ut ante. In id eros. Suspendisse lacus turpis, cursus egestas at sem. Mauris quam enim, molestie. Donec leo, vivamus fermentum nibh in augue praesent congue rutrum.</a></p>
+				</li>
+			</ul>
+		</div>
+
 		<div id="experience">
 			<h1>Experience</h1>
 			<ul class="style1">
@@ -58,6 +87,7 @@
 				</li>
 			</ul>
 		</div>
+
 		<div id="copyright">
 			<span>Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</span>
 		</div>
