--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<ul>
 				<li><a href="#projects" accesskey="4" title="">Projects</a></li>
 				<li><a href="#experience" accesskey="3" title="">Experience</a></li>
-				<li><a href="#" accesskey="5" title="">Contact Me</a></li>
+				<li><a href="#contact-me" accesskey="5" title="">Contact Me</a></li>
 			</ul>
 		</div>
 	</div>
@@ -40,27 +40,29 @@
 			<h1>Projects</h1>
 			<ul class="style1">
 				<li class="first">
-					<p class="date"><a href="#">Jan<b>05</b></a></p>
-					<h3>Amet sed volutpat mauris</h3>
-					<p><a href="#">Consectetuer adipiscing elit. Nam pede erat, porta eu, lobortis eget, tempus et, tellus. Etiam neque. Vivamus consequat lorem at nisl. Nullam non wisi a sem semper eleifend. Etiam non felis. Donec ut ante.</a></p>
+					<p class="date"><a href="#"><strong>Current</strong></a></p>
+					<h3>Requiry</h3>
+					<p>A social networking application for research projects (based on Android, and Azure)</p>
 				</li>
 				<li>
-					<p class="date"><a href="#">Jan<b>03</b></a></p>
-					<h3>Sagittis diam dolor amet</h3>
-					<p><a href="#">Etiam non felis. Donec ut ante. In id eros. Suspendisse lacus turpis, cursus egestas at sem. Mauris quam enim, molestie. Donec leo, vivamus fermentum nibh in augue praesent congue rutrum.</a></p>
+					<p class="date"><a href="#"><strong>Current</strong></a></p>
+					<h3><a href="https://www.curiocity.org.in">Website: CurioCity</a></h3>
+					<p>Developed a website for "CurioCity", a student run non-profit organization</p>
 				</li>
 				<li>
-					<p class="date"><a href="#">Jan<b>01</b></a></p>
-					<h3>Amet sed volutpat mauris</h3>
-					<p><a href="#">Consectetuer adipiscing elit. Nam pede erat, porta eu, lobortis eget, tempus et, tellus. Etiam neque. Vivamus consequat lorem at nisl. Nullam non wisi a sem semper eleifend. Etiam non felis. Donec ut ante.</a></p>
+					<p class="date"><a href="#">Jan<b>2017</b></a></p>
+					<h3><a href="https://github.com/nishantsahoo/IMDB_Top50_Scrape">IMDB Top 50 Movies (1898-2017)</a></h3>
+					<p>Worked on a web scraper which scrapes a list of top 50 movies as rated by IMDB from the year 1898-2017</p>
 				</li>
 				<li>
-					<p class="date"><a href="#">Dec<b>31</b></a></p>
-					<h3>Sagittis diam dolor amet</h3>
-					<p><a href="#">Etiam non felis. Donec ut ante. In id eros. Suspendisse lacus turpis, cursus egestas at sem. Mauris quam enim, molestie. Donec leo, vivamus fermentum nibh in augue praesent congue rutrum.</a></p>
+					<p class="date"><a href="#">Jul<b>2016</b></a></p>
+					<h3>Home Portal (MSIL, Gurgaon)</h3>
+					<p><a href="#">Developed a Home Portal for the Engineering Division</a></p>
 				</li>
 			</ul>
 		</div>
+
+		<div id="empty"></div>
 
 		<div id="experience">
 			<h1>Experience</h1>
@@ -86,6 +88,9 @@
 					<p><a href="#">Etiam non felis. Donec ut ante. In id eros. Suspendisse lacus turpis, cursus egestas at sem. Mauris quam enim, molestie. Donec leo, vivamus fermentum nibh in augue praesent congue rutrum.</a></p>
 				</li>
 			</ul>
+		</div>
+
+		<div id="contact-me">
 		</div>
 
 		<div id="copyright">
