--- a/index.html
+++ b/index.html
@@ -40,25 +40,31 @@
 			<h1>Projects</h1>
 			<ul class="style1">
 				<li class="first">
-					<p class="date"><a href="#"><strong>Current</strong></a></p>
+					<p class="date"><strong>Current</strong></p>
 					<h3>Requiry</h3>
-					<p>A social networking application for research projects (based on Android, and Azure)</p>
+					<p>A social networking application for research projects (based on Android, and Azure)</br></br></p>
 				</li>
 				<li>
-					<p class="date"><a href="#"><strong>Current</strong></a></p>
+					<p class="date"><strong>Current</strong></p>
 					<h3><a href="https://www.curiocity.org.in">Website: CurioCity</a></h3>
-					<p>Developed a website for "CurioCity", a student run non-profit organization</p>
+					<p>Developed a website for "CurioCity", a student run non-profit organization based in Manipal.</br></br></p>
 				</li>
 				<li>
-					<p class="date"><a href="#">Jan<b>2017</b></a></p>
-					<h3><a href="https://github.com/nishantsahoo/IMDB_Top50_Scrape">IMDB Top 50 Movies (1898-2017)</a></h3>
-					<p>Worked on a web scraper which scrapes a list of top 50 movies as rated by IMDB from the year 1898-2017</p>
+					<p class="date">Jan<b>2017</b></p>
+					<h3><a href="https://github.com/nishantsahoo/IMDB_Top50_Scrape">IMDB Top 50 Movies</a></h3>
+					<p>Worked on a web scraper which scrapes a list of top 50 movies as rated by IMDB from the year 1898 to 2017 using Python and BeautifulSoup4.</br></br></p>
 				</li>
 				<li>
-					<p class="date"><a href="#">Jul<b>2016</b></a></p>
+					<p class="date">Jul<b>2016</b></p>
 					<h3>Home Portal (MSIL, Gurgaon)</h3>
-					<p><a href="#">Developed a Home Portal for the Engineering Division</a></p>
+					<p>Developed a Home Portal for the Engineering Division.</br></br></br></p>
 				</li>
+				<li>
+					<p class="date"><strong>Current</strong></p>
+					<h3><a href="https://play.google.com/store/apps/details?id=com.woofs.kashishgrover.mttn">MTTN App (Manipal The Talk Network)</a></h3>
+					<p>Developed and deployed an Android app for the students of Manipal University to keep a track of their attendance and notify them regarding the happenings in and around Manipal, and allow them to read MTTN’s articles within the app itself.</p>
+				</li>
+
 			</ul>
 		</div>
 
