--- a/index.html
+++ b/index.html
@@ -96,10 +96,8 @@
 			</ul>
 		</div>
 
-		<div id="contact-me">
-		</div>
-
-		<div id="copyright">
+		<div id="about-me">
+			<h3><span> lol lol lol</span></h3></br>
 			<span>Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</span>
 		</div>
 	</div>
