--- a/index.html
+++ b/index.html
@@ -73,25 +73,33 @@
 		<div id="experience">
 			<h1>Experience</h1>
 			<ul class="style1">
-				<li class="first">
-					<p class="date"><a href="#">Jan<b>05</b></a></p>
-					<h3>Amet sed volutpat mauris</h3>
-					<p><a href="#">Consectetuer adipiscing elit. Nam pede erat, porta eu, lobortis eget, tempus et, tellus. Etiam neque. Vivamus consequat lorem at nisl. Nullam non wisi a sem semper eleifend. Etiam non felis. Donec ut ante.</a></p>
+					<h3>Work at MTTN (Manipal The Talk Network)</h3>
+					<li class="first">
+					<ul class="style1">
+						<li>
+							<p class="date"><a href="#">Jan<b>05</b></a></p>
+							<h3>Photographer</h3>
+						</li>
+						<li>
+							<p class="date"><a href="#">Jan<b>05</b></a></p>
+							<h3>Android application developer</h3>
+						</li>
+					</ul>
 				</li>
 				<li>
 					<p class="date"><a href="#">Jan<b>03</b></a></p>
-					<h3>Sagittis diam dolor amet</h3>
-					<p><a href="#">Etiam non felis. Donec ut ante. In id eros. Suspendisse lacus turpis, cursus egestas at sem. Mauris quam enim, molestie. Donec leo, vivamus fermentum nibh in augue praesent congue rutrum.</a></p>
+					<h3>Internship at MSIL, Gurgaon</h3>
+					<p>Summer training</p>
 				</li>
 				<li>
 					<p class="date"><a href="#">Jan<b>01</b></a></p>
-					<h3>Amet sed volutpat mauris</h3>
-					<p><a href="#">Consectetuer adipiscing elit. Nam pede erat, porta eu, lobortis eget, tempus et, tellus. Etiam neque. Vivamus consequat lorem at nisl. Nullam non wisi a sem semper eleifend. Etiam non felis. Donec ut ante.</a></p>
+					<h3>CurioCity</h3>
+					<p>Instructor, web developer, and photographer</p>
 				</li>
 				<li>
 					<p class="date"><a href="#">Dec<b>31</b></a></p>
-					<h3>Sagittis diam dolor amet</h3>
-					<p><a href="#">Etiam non felis. Donec ut ante. In id eros. Suspendisse lacus turpis, cursus egestas at sem. Mauris quam enim, molestie. Donec leo, vivamus fermentum nibh in augue praesent congue rutrum.</a></p>
+					<h3>Core Committee member of ACM, Manipal</h3>
+					<p>Yo</p>
 				</li>
 			</ul>
 		</div>
