--- a/index.html
+++ b/index.html
@@ -73,18 +73,11 @@
 		<div id="experience">
 			<h1>Experience</h1>
 			<ul class="style1">
+				<li class="first">
+					<p class="date"><strong>Current</strong></p>
 					<h3>Work at MTTN (Manipal The Talk Network)</h3>
-					<li class="first">
-					<ul class="style1">
-						<li>
-							<p class="date"><a href="#">Jan<b>05</b></a></p>
-							<h3>Photographer</h3>
-						</li>
-						<li>
-							<p class="date"><a href="#">Jan<b>05</b></a></p>
-							<h3>Android application developer</h3>
-						</li>
-					</ul>
+					<p>&#8226; Photographer</p>
+					<p>&#8226; Android Application Developer</p>
 				</li>
 				<li>
 					<p class="date"><a href="#">Jan<b>03</b></a></p>
