--- a/index.html
+++ b/index.html
@@ -97,7 +97,9 @@
 			</ul>
 		</div>
 
-		<div id="about-me">
+		<div id="empty"></div>
+
+		<div id="contact-me">
 			<h3><span> lol lol lol</span></h3></br>
 			<span>Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</span>
 		</div>
