--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				<li>
 					<p class="date"><strong>Current</strong></p>
 					<h3><a href="https://play.google.com/store/apps/details?id=com.woofs.kashishgrover.mttn">MTTN App (Manipal The Talk Network)</a></h3>
-					<p>Developed and deployed an Android app for the students of Manipal University to keep a track of their attendance and notify them regarding the happenings in and around Manipal, and allow them to read MTTN’s articles within the app itself.</p>
+					<p>Developed an Android app under Kashish Grover for the students of Manipal University to keep a track of their attendance and allow them to read MTTN’s articles within the app itself.</p>
 				</li>
 
 			</ul>
@@ -77,21 +77,22 @@
 					<h3>Work at MTTN (Manipal The Talk Network)</h3>
 					<p>&#8226; Photographer</p>
 					<p>&#8226; Android Application Developer</p>
+				</br>
 				</li>
 				<li>
 					<p class="date"><a href="#">Jan<b>03</b></a></p>
 					<h3>Internship at MSIL, Gurgaon</h3>
-					<p>Summer training</p>
+					<p>Summer training</br></br></br></p>
 				</li>
 				<li>
 					<p class="date"><a href="#">Jan<b>01</b></a></p>
 					<h3>CurioCity</h3>
-					<p>Instructor, web developer, and photographer</p>
+					<p>Instructor, web developer, and photographer</br></br></br></p>
 				</li>
 				<li>
 					<p class="date"><a href="#">Dec<b>31</b></a></p>
-					<h3>Core Committee member of ACM, Manipal</h3>
-					<p>Yo</p>
+					<h3>ACM, Manipal</h3>
+					<p>Core committee member</br></br></br></p>
 				</li>
 			</ul>
 		</div>
