--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -41,24 +41,24 @@
 			<ul class="style1">
 				<li class="first">
 					<h3>Requiry</h3>
-					<p>A social networking application for research projects (based on Android, and Azure)</br></br></p>
+					<p>A social networking application for research projects. (based on Android, and Azure) This project was developed during the Microsoft Hackathon, 2016 held at MIT, Manipal.</br></br></p>
 				</li>
 				<li>
 					<h3><a href="https://www.curiocity.org.in">Website: CurioCity</a></h3>
-					<p>Developed a website for "CurioCity", a student run non-profit organization based in Manipal.</br></br></p>
+					<p>Developed a website for "CurioCity", a student run non-profit organization based in Manipal. - Ongoing</br></br></p>
 				</li>
 				<li>
 
 					<h3><a href="https://github.com/nishantsahoo/IMDB_Top50_Scrape">IMDB Top 50 Movies</a></h3>
-					<p>Worked on a web scraper which scrapes a list of top 50 movies as rated by IMDB from the year 1898 to 2017 using Python and BeautifulSoup4.</br></br></p>
+					<p>Developed a web scraper which scrapes a list of top 50 movies as rated by IMDB from the year 1898 to 2017 using Python and BeautifulSoup4.</br></br></p>
 				</li>
 				<li>
 					<h3>Home Portal (MSIL, Gurgaon)</h3>
-					<p>Developed a Home Portal for the Engineering Division.</br></br></br></p>
+					<p>Developed a Home Portal for the Engineering Division as a project during my internship at MSIL, Gurugram.</br></br></br></p>
 				</li>
 				<li>
-					<h3><a href="https://play.google.com/store/apps/details?id=com.woofs.kashishgrover.mttn">MTTN App (Manipal The Talk Network)</a></h3>
-					<p>Developed an Android app under Kashish Grover for the students of Manipal University to keep a track of their attendance and allow them to read MTTN’s articles within the app itself.</p>
+					<h3><a href="https://play.google.com/store/apps/details?id=com.woofs.kashishgrover.mttn">MTTN App - Ongoing (Manipal The Talk Network)</a></h3>
+					<p>Developed an Android app for the students of Manipal University to keep a track of their attendance, and allow them to read MTTN’s articles within the app itself.</p>
 				</li>
 
 			</ul>
@@ -92,7 +92,8 @@
 
 		<div id="contact-me">
 			<h3><span>nishantsahoo.in@gmail.com</span></h3></br>
-			<span>Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</span>
+			<!-- span>Design by <a href href="#"><i class="fa fa-github"></i></a></li>
+            </ul>
 		</div>
 	</div>
 </div>
