--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
 			<h1>Projects</h1>
 			<ul class="style1">
 				<li class="first">
-					<h3>Requiry</h3>
-					<p>A social networking application for research projects. (based on Android, and Azure) This project was developed during the Microsoft Hackathon, 2016 held at MIT, Manipal.</br></br></p>
+					<h3>Requiry (Based on Android, and Azure)</h3>
+					<p>A social networking application for research projects. This project was developed during the Microsoft Hackathon, 2016 held at MIT, Manipal.</br></br></p>
 				</li>
 				<li>
-					<h3><a href="https://www.curiocity.org.in">Website: CurioCity</a></h3>
-					<p>Developed a website for "CurioCity", a student run non-profit organization based in Manipal. - Ongoing</br></br></p>
+					<h3><a href="https://www.curiocity.org.in">Website: CurioCity - Ongoing</a></h3>
+					<p>Developed a website for "CurioCity", a student run non-profit organization based in Manipal.</br></br></p>
 				</li>
 				<li>
 
