--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			<ul class="style1">
 				<li class="first">
 					<h3>Requiry (Based on Android, and Azure)</h3>
-					<p>A social networking application for research projects. This project was developed during the Microsoft Hackathon, 2016 held at MIT, Manipal.</br></br></p>
+					<p>A social networking application for research projects. This project was developed during the Microsoft Hackathon, 2016 held at MIT, Manipal.</br></p>
 				</li>
 				<li>
 					<h3><a href="https://www.curiocity.org.in">Website: CurioCity - Ongoing</a></h3>
@@ -54,7 +54,7 @@
 				</li>
 				<li>
 					<h3>Home Portal (MSIL, Gurgaon)</h3>
-					<p>Developed a Home Portal for the Engineering Division as a project during my internship at MSIL, Gurugram.</br></br></br></p>
+					<p>Developed a Home Portal for the Engineering Division as a project during my internship at MSIL, Gurugram.</br></br></p>
 				</li>
 				<li>
 					<h3><a href="https://play.google.com/store/apps/details?id=com.woofs.kashishgrover.mttn">MTTN App - Ongoing (Manipal The Talk Network)</a></h3>
