--- a/index.html
+++ b/index.html
@@ -41,20 +41,20 @@
 			<ul class="style1">
 				<li class="first">
 					<h3>Requiry (Based on Android, and Azure)</h3>
-					<p>A social networking application for research projects. This project was developed during the Microsoft Hackathon, 2016 held at MIT, Manipal.</br></p>
+					<p>A social networking application for research projects. This project was developed during the Microsoft Hackathon, 2016 held at MIT, Manipal.</p>
 				</li>
 				<li>
 					<h3><a href="https://www.curiocity.org.in">Website: CurioCity - Ongoing</a></h3>
-					<p>Developed a website for "CurioCity", a student run non-profit organization based in Manipal.</br></br></p>
+					<p>Developed a website for "CurioCity", a student run non-profit organization based in Manipal.</br></p>
 				</li>
 				<li>
 
 					<h3><a href="https://github.com/nishantsahoo/IMDB_Top50_Scrape">IMDB Top 50 Movies</a></h3>
-					<p>Developed a web scraper which scrapes a list of top 50 movies as rated by IMDB from the year 1898 to 2017 using Python and BeautifulSoup4.</br></br></p>
+					<p>Developed a web scraper which scrapes a list of top 50 movies as rated by IMDB from the year 1898 to 2017 using Python and BeautifulSoup4.</br></p>
 				</li>
 				<li>
 					<h3>Home Portal (MSIL, Gurgaon)</h3>
-					<p>Developed a Home Portal for the Engineering Division as a project during my internship at MSIL, Gurugram.</br></br></p>
+					<p>Developed a Home Portal for the Engineering Division as a project during my internship at MSIL, Gurugram.</p>
 				</li>
 				<li>
 					<h3><a href="https://play.google.com/store/apps/details?id=com.woofs.kashishgrover.mttn">MTTN App - Ongoing (Manipal The Talk Network)</a></h3>
