--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
 				</li>
 				<li>
 					<h3><a href="https://www.curiocity.org.in">Website: CurioCity - Ongoing</a></h3>
-					<p>Developed a website for "CurioCity", a student run non-profit organization based in Manipal.</br></p>
+					<p>Developed a website for "CurioCity", a student run non-profit organization based in Manipal.</p>
 				</li>
 				<li>
 
 					<h3><a href="https://github.com/nishantsahoo/IMDB_Top50_Scrape">IMDB Top 50 Movies</a></h3>
-					<p>Developed a web scraper which scrapes a list of top 50 movies as rated by IMDB from the year 1898 to 2017 using Python and BeautifulSoup4.</br></p>
+					<p>Developed a web scraper which scrapes a list of top 50 movies as rated by IMDB from the year 1898 to 2017 using Python and BeautifulSoup4.</p>
 				</li>
 				<li>
 					<h3>Home Portal (MSIL, Gurgaon)</h3>
