--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 
 		<div id="projects">
 			<h1>Projects</h1>
+			<br>
 			<ul class="style1">
 				<li class="first">
 					<h3>Requiry (Based on Android, and Azure)</h3>
@@ -92,8 +93,8 @@
 
 		<div id="contact-me">
 			<h3><span>nishantsahoo.in@gmail.com</span></h3></br>
-			<!-- span>Design by <a href href="#"><i class="fa fa-github"></i></a></li>
-            </ul>
+			<!-- span>Design by <a href href="#"><i class="fa fa-github"></i></a></li>-->
+			</ul>
 		</div>
 	</div>
 </div>
