--- a/index.html
+++ b/index.html
@@ -73,19 +73,22 @@
 					<h3>Work at MTTN (Manipal The Talk Network)</h3>
 					<p>&#8226; Photographer</p>
 					<p>&#8226; Android Application Developer</p>
+					<p>&#8226; Deputy Head, Photography (Creative)</p>
 				</br>
 				</li>
 				<li>
 					<h3>Internship at MSIL, Gurgaon</h3>
-					<p>Summer training</br></br></br></p>
+					<p>Summer training: As a part of my summer training, I developed a Home Portal for the Engineering Division as a project.</p>
 				</li>
 				<li>
 					<h3>CurioCity</h3>
-					<p>Instructor, web developer, and photographer</br></br></br></p>
+					<p>&#8226; Web Developer</p>
+					<p>&#8226; Instructor</p>
+					<p>&#8226; Photographer</p>
 				</li>
 				<li>
 					<h3>ACM, Manipal</h3>
-					<p>Core committee member</br></br></br></p>
+					<p>Core committee member</br></p>
 				</li>
 			</ul>
 		</div>
