--- a/index.html
+++ b/index.html
@@ -74,11 +74,10 @@
 					<p>&#8226; Photographer</p>
 					<p>&#8226; Android Application Developer</p>
 					<p>&#8226; Deputy Head, Photography (Creative)</p>
-				</br>
 				</li>
 				<li>
 					<h3>Internship at MSIL, Gurgaon</h3>
-					<p>Summer training: As a part of my summer training, I developed a Home Portal for the Engineering Division as a project.</p>
+					<p>Summer training: Interned for 6-weeks under the IT department, where I learnt about the company's network technologies, and project management. I developed a Home Portal for the Engineering Division as my final project. </p>
 				</li>
 				<li>
 					<h3>CurioCity</h3>
