--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
 		<div id="contact-me">
 			<h3><span>nishantsahoo.in@gmail.com</span></h3></br>
 			<!-- span>Design by <a href href="#"><i class="fa fa-github"></i></a></li>-->
+			<a href="https://github.com/nishantsahoo"><i class="fa fa-github"></i></a>
 			</ul>
 		</div>
 	</div>
