--- a/index.html
+++ b/index.html
@@ -49,6 +49,14 @@
 					<p>Developed a website for "CurioCity", a student run non-profit organization based in Manipal.</p>
 				</li>
 				<li>
+					<h3><a href="https://github.com/nishantsahoo/ShoppingCart-React-NodeJs-Electron">MyCart (Nagarro)</a></h3>
+					<p>Developed an E-commerce application using MERN stack (MySQL, Express, React, NodeJs)</p>
+				</li>
+				<li>
+					<h3><a href="">Fur Elise - Beethoven (Midi track)</a></h3>
+					<p>Built a midi track for Fur Elise using ScribbleTune (NodeJs)</p>
+				</li>
+				<li>
 
 					<h3><a href="https://github.com/nishantsahoo/IMDB_Top50_Scrape">IMDB Top 50 Movies</a></h3>
 					<p>Developed a web scraper which scrapes a list of top 50 movies as rated by IMDB from the year 1898 to 2017 using Python and BeautifulSoup4.</p>
