Added work experience

--- a/index.html
+++ b/index.html
@@ -88,6 +88,14 @@
 					<p>Summer training: Interned for 6-weeks under the IT department, where I learnt about the company's network technologies, and project management. I developed a Home Portal for the Engineering Division as my final project. </p>
 				</li>
 				<li>
+					<h3>Internship at Nagarro, Gurgaon</h3>
+					<p>Built a cross platform E-commerce application using MERN (MySQL, Express, React, NodeJs) stack and electron.
+				</li>
+				<li>
+					<h3>Internship at DXC, Noida</h3>
+					<p>Worked on a chat application using MEAN stack.</p>
+				</li>
+				<li>
 					<h3>CurioCity</h3>
 					<p>&#8226; Web Developer</p>
 					<p>&#8226; Instructor</p>
