Edit work experience

--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
 				</li>
 				<li>
 					<h3>CurioCity</h3>
-					<p>&#8226; Web Developer</p>
-					<p>&#8226; Instructor</p>
+					<p>&#8226; Web Developer: Built a website for the NGO using HTML, CSS (Bootstrap) and hosted the page using Github Pages at <a href="https://curiocity.org.in">curiocity.org.in</a></p>
+					<p>&#8226; Instructor: Taught junior school students English</p>
 					<p>&#8226; Photographer</p>
 				</li>
 				<li>
