--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
 		<div id="contact-me">
 			<h3><span>nishantsahoo.in@gmail.com</span></h3></br>
-			<!-- span>Design by <a href href="#"><i class="fa fa-github"></i></a></li>-->
+			<span><a href href="https://www.github.com/nishantsahoo"><i class="fa fa-github"></i></a></li>
 			</ul>
 		</div>
 	</div>
