--- a/index.html
+++ b/index.html
@@ -110,7 +110,9 @@
 		<div id="empty"></div>
 
 		<div id="contact-me">
-			<h3><span>nishantsahoo.in@gmail.com</span></h3></br>
+			<h1>Contact Me</h1>
+			<h3>github/nishantsahoo</h3>
+			<h3>nishantsahoo.in@gmail.com</h3>
 			</ul>
 		</div>
 	</div>
