--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -97,8 +97,8 @@
 				</li>
 				<li>
 					<h3>CurioCity</h3>
-					<p>&#8226; Web Developer: Built a website for the NGO using HTML, CSS (Bootstrap) and hosted the page using Github Pages at <a href="https://curiocity.org.in">curiocity.org.in</a></p>
-					<p>&#8226; Instructor: Taught junior school students English</p>
+					<p>&#8226; Web Developer: Built a website for the NGO using HTML, CSS (Bootstrap) and hosted the page using Github Pages</p>
+					<p>&#8226; Instructor</p>
 					<p>&#8226; Photographer</p>
 				</li>
 				<li>
@@ -111,8 +111,8 @@
 
 		<div id="contact-me">
 			<h1>Contact Me</h1>
-			<h3>github/nishantsahoo</h3>
-			<h3>nishantsahoo.in@gmail.com</h3>
+			<h5>github/nishantsahoo</h5>
+			<h5>nishantsahoo.in@gmail.com</h5>
 			</ul>
 		</div>
 	</div>
