--- a/index.html
+++ b/index.html
@@ -77,6 +77,14 @@
 		<div id="experience">
 			<h1>Experience</h1>
 			<ul class="style1">
+				<li>
+					<h3>Internship at Nagarro, Gurgaon - July 2017</h3>
+					<p>Built a cross platform E-commerce application using MERN (MySQL, Express, React, NodeJs) stack and electron.
+				</li>
+				<li>
+					<h3>Internship at DXC, Noida - July 2017</h3>
+					<p>Worked on a chat application using MEAN stack.</p>
+				</li>
 				<li class="first">
 					<h3>Work at MTTN (Manipal The Talk Network)</h3>
 					<p>&#8226; Photographer</p>
@@ -84,16 +92,8 @@
 					<p>&#8226; Deputy Head, Photography (Creative)</p>
 				</li>
 				<li>
-					<h3>Internship at MSIL, Gurgaon</h3>
+					<h3>Internship at MSIL, Gurgaon - July 2016</h3>
 					<p>Summer training: Interned for 6-weeks under the IT department, where I learnt about the company's network technologies, and project management. I developed a Home Portal for the Engineering Division as my final project. </p>
-				</li>
-				<li>
-					<h3>Internship at Nagarro, Gurgaon</h3>
-					<p>Built a cross platform E-commerce application using MERN (MySQL, Express, React, NodeJs) stack and electron.
-				</li>
-				<li>
-					<h3>Internship at DXC, Noida</h3>
-					<p>Worked on a chat application using MEAN stack.</p>
 				</li>
 				<li>
 					<h3>CurioCity</h3>
