--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					<p>Developed an E-commerce application using MERN stack (MySQL, Express, React, NodeJs)</p>
 				</li>
 				<li>
-					<h3><a href="">Fur Elise - Beethoven (Midi track)</a></h3>
+					<h3><a href="https://github.com/nishantsahoo/ScribbleTune-FurElise-Beethoven">Fur Elise - Beethoven (Midi track)</a></h3>
 					<p>Built a midi track for Fur Elise using ScribbleTune (NodeJs)</p>
 				</li>
 				<li>
@@ -79,11 +79,11 @@
 			<ul class="style1">
 				<li>
 					<h3>Internship at Nagarro, Gurgaon - July 2017</h3>
-					<p>Built a cross platform E-commerce application using MERN (MySQL, Express, React, NodeJs) stack and electron.
+					<p>&#8226; Built a cross platform E-commerce application using MERN (MySQL, Express, React, NodeJs) stack and electron.
 				</li>
 				<li>
 					<h3>Internship at DXC, Noida - July 2017</h3>
-					<p>Worked on a chat application using MEAN stack.</p>
+					<p>&#8226; Worked on a chat application using MEAN stack.</p>
 				</li>
 				<li class="first">
 					<h3>Work at MTTN (Manipal The Talk Network)</h3>
@@ -93,7 +93,7 @@
 				</li>
 				<li>
 					<h3>Internship at MSIL, Gurgaon - July 2016</h3>
-					<p>Summer training: Interned for 6-weeks under the IT department, where I learnt about the company's network technologies, and project management. I developed a Home Portal for the Engineering Division as my final project. </p>
+					<p>&#8226; Summer training: Interned for 6-weeks under the IT department, where I learnt about the company's network technologies, and project management. I developed a Home Portal for the Engineering Division as my final project. </p>
 				</li>
 				<li>
 					<h3>CurioCity</h3>
@@ -103,7 +103,7 @@
 				</li>
 				<li>
 					<h3>ACM, Manipal</h3>
-					<p>Core committee member</br></p>
+					<p>&#8226; Core committee member</br></p>
 				</li>
 			</ul>
 		</div>
