--- a/index.html
+++ b/index.html
@@ -1,121 +1,127 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Nishant Sahoo</title>
-<meta name="keywords" content="" />
-<meta name="description" content="" />
-<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900" rel="stylesheet" />
-<link href="default.css" rel="stylesheet" type="text/css" media="all" />
-<link href="fonts.css" rel="stylesheet" type="text/css" media="all" />
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<title>Nishant Sahoo</title>
+		<meta name="keywords" content="" />
+		<meta name="description" content="" />
+		<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900" rel="stylesheet" />
+		<link href="default.css" rel="stylesheet" type="text/css" media="all" />
+		<link href="fonts.css" rel="stylesheet" type="text/css" media="all" />
+	</head>
 
-</head>
-<body>
-<div id="page" class="container">
-	<div id="header">
-		<div id="logo">
-			<img src="images/pic02.jpg" alt="" />
-			<h1><a href="#">Nishant Sahoo</a></h1>
-		</div>
-		<div id="menu">
-			<ul>
-				<li><a href="#projects" accesskey="4" title="">Projects</a></li>
-				<li><a href="#experience" accesskey="3" title="">Experience</a></li>
-				<li><a href="#contact-me" accesskey="5" title="">Contact Me</a></li>
-			</ul>
-		</div>
-	</div>
+	<body>
+		<!-- Page -->
+		<div id="page" class="container">
+			<!-- Header -->
+			<div id="header">
+				<div id="logo">
+					<img src="images/pic02.jpg" alt="" />
+					<h1><a href="#">Nishant Sahoo</a></h1>
+				</div>
+				<!-- Menu -->
+				<div id="menu">
+					<ul>
+						<li><a href="#projects" accesskey="4" title="">Projects</a></li>
+						<li><a href="#experience" accesskey="3" title="">Experience</a></li>
+						<li><a href="#contact-me" accesskey="5" title="">Contact Me</a></li>
+					</ul>
+				</div> <!-- Menu -->
+			</div> <!-- Header -->
 
-	<div id="main">
+			<!-- Main -->
+			<div id="main">
 
-		<div id="description">
-			<div class="titleH">
-				<h1>Nishant Sahoo</h1>
-				<span class="byline">Software developer. Musician. Photographer.</span>
-			</div>
-		</div>
+				<!-- Description -->
+				<div id="description">
+					<div class="titleH">
+						<h1>Nishant Sahoo</h1>
+						<span class="byline">Software developer. Musician. Photographer.</span>
+					</div>
+				</div> <!-- Description -->
 
-		<div id="projects">
-			<h1>Projects</h1>
-			<br>
-			<ul class="style1">
-				<li class="first">
-					<h3>Requiry (Based on Android, and Azure)</h3>
-					<p>A social networking application for research projects. This project was developed during the Microsoft Hackathon, 2016 held at MIT, Manipal.</p>
-				</li>
-				<li>
-					<h3><a href="https://www.curiocity.org.in">Website: CurioCity - Ongoing</a></h3>
-					<p>Developed a website for "CurioCity", a student run non-profit organization based in Manipal.</p>
-				</li>
-				<li>
-					<h3><a href="https://github.com/nishantsahoo/ShoppingCart-React-NodeJs-Electron">MyCart (Nagarro)</a></h3>
-					<p>Developed an E-commerce application using MERN stack (MySQL, Express, React, NodeJs)</p>
-				</li>
-				<li>
-					<h3><a href="https://github.com/nishantsahoo/ScribbleTune-FurElise-Beethoven">Fur Elise - Beethoven (Midi track)</a></h3>
-					<p>Built a midi track for Fur Elise using ScribbleTune (NodeJs)</p>
-				</li>
-				<li>
+				<!-- Projects -->
+				<div id="projects">
+					<h1>Projects</h1>
+					<br>
+					<ul class="style1">
+						<li class="first">
+							<h3>Requiry (Based on Android, and Azure)</h3>
+							<p>&#8226; A social networking application for research projects. This project was developed during the Microsoft Hackathon, 2016 held at MIT, Manipal.</p>
+						</li>
+						<li>
+							<h3><a href="https://www.curiocity.org.in">Website: CurioCity - Ongoing</a></h3>
+							<p>&#8226; Developed a website for "CurioCity", a student run non-profit organization based in Manipal.</p>
+						</li>
+						<li>
+							<h3><a href="https://github.com/nishantsahoo/ShoppingCart-React-NodeJs-Electron">MyCart (Nagarro)</a></h3>
+							<p>&#8226; Developed an E-commerce application using MERN stack (MySQL, Express, React, NodeJs)</p>
+						</li>
+						<li>
+							<h3><a href="https://github.com/nishantsahoo/ScribbleTune-FurElise-Beethoven">Fur Elise - Beethoven (Midi track)</a></h3>
+							<p>&#8226; Built a midi track for Fur Elise using ScribbleTune (NodeJs)</p>
+						</li>
+						<li>
+							<h3><a href="https://github.com/nishantsahoo/IMDB_Top50_Scrape">IMDB Top 50 Movies</a></h3>
+							<p>&#8226; Developed a web scraper which scrapes a list of top 50 movies as rated by IMDB from the year 1898 to 2017 using Python and BeautifulSoup4.</p>
+						</li>
+						<li>
+							<h3>Home Portal (MSIL, Gurgaon)</h3>
+							<p>&#8226; Developed a Home Portal for the Engineering Division as a project during my internship at MSIL, Gurugram.</p>
+						</li>
+						<li>
+							<h3><a href="https://play.google.com/store/apps/details?id=com.woofs.kashishgrover.mttn">MTTN App - Ongoing (Manipal The Talk Network)</a></h3>
+							<p>&#8226; Developed an Android app for the students of Manipal University to keep a track of their attendance, and allow them to read MTTN’s articles within the app itself.</p>
+						</li>
+					</ul>
+				</div> <!-- Projects -->
+				<div id="empty"></div>
 
-					<h3><a href="https://github.com/nishantsahoo/IMDB_Top50_Scrape">IMDB Top 50 Movies</a></h3>
-					<p>Developed a web scraper which scrapes a list of top 50 movies as rated by IMDB from the year 1898 to 2017 using Python and BeautifulSoup4.</p>
-				</li>
-				<li>
-					<h3>Home Portal (MSIL, Gurgaon)</h3>
-					<p>Developed a Home Portal for the Engineering Division as a project during my internship at MSIL, Gurugram.</p>
-				</li>
-				<li>
-					<h3><a href="https://play.google.com/store/apps/details?id=com.woofs.kashishgrover.mttn">MTTN App - Ongoing (Manipal The Talk Network)</a></h3>
-					<p>Developed an Android app for the students of Manipal University to keep a track of their attendance, and allow them to read MTTN’s articles within the app itself.</p>
-				</li>
+				<!-- Experience -->
+				<div id="experience">
+					<h1>Experience</h1>
+					<ul class="style1">
+						<li>
+							<h3>Internship at Nagarro, Gurgaon - July 2017</h3>
+							<p>&#8226; Built a cross platform E-commerce application using MERN (MySQL, Express, React, NodeJs) stack and electron.
+						</li>
+						<li>
+							<h3>Internship at DXC, Noida - July 2017</h3>
+							<p>&#8226; Worked on a chat application using MEAN stack.</p>
+						</li>
+						<li class="first">
+							<h3>Work at MTTN (Manipal The Talk Network)</h3>
+							<p>&#8226; Photographer</p>
+							<p>&#8226; Android Application Developer</p>
+							<p>&#8226; Deputy Head, Photography (Creative)</p>
+						</li>
+						<li>
+							<h3>Internship at MSIL, Gurgaon - July 2016</h3>
+							<p>&#8226; Summer training: Interned for 6-weeks under the IT department, where I learnt about the company's network technologies, and project management. I developed a Home Portal for the Engineering Division as my final project. </p>
+						</li>
+						<li>
+							<h3>CurioCity</h3>
+							<p>&#8226; Web Developer: Built a website for the NGO using HTML, CSS (Bootstrap) and hosted the page using Github Pages</p>
+							<p>&#8226; Instructor</p>
+							<p>&#8226; Photographer</p>
+						</li>
+						<li>
+							<h3>ACM, Manipal</h3>
+							<p>&#8226; Core committee member</br></p>
+						</li>
+					</ul>
+				</div> <!-- Experience -->
+				<div id="empty"></div>
 
-			</ul>
-		</div>
-		<div id="empty"></div>
+				<div id="contact-me">
+					<h1>Contact Me</h1>
+					<h5>github/nishantsahoo</h5>
+					<h5>nishantsahoo.in@gmail.com</h5>
+					</ul>
+				</div>
 
-		<div id="experience">
-			<h1>Experience</h1>
-			<ul class="style1">
-				<li>
-					<h3>Internship at Nagarro, Gurgaon - July 2017</h3>
-					<p>&#8226; Built a cross platform E-commerce application using MERN (MySQL, Express, React, NodeJs) stack and electron.
-				</li>
-				<li>
-					<h3>Internship at DXC, Noida - July 2017</h3>
-					<p>&#8226; Worked on a chat application using MEAN stack.</p>
-				</li>
-				<li class="first">
-					<h3>Work at MTTN (Manipal The Talk Network)</h3>
-					<p>&#8226; Photographer</p>
-					<p>&#8226; Android Application Developer</p>
-					<p>&#8226; Deputy Head, Photography (Creative)</p>
-				</li>
-				<li>
-					<h3>Internship at MSIL, Gurgaon - July 2016</h3>
-					<p>&#8226; Summer training: Interned for 6-weeks under the IT department, where I learnt about the company's network technologies, and project management. I developed a Home Portal for the Engineering Division as my final project. </p>
-				</li>
-				<li>
-					<h3>CurioCity</h3>
-					<p>&#8226; Web Developer: Built a website for the NGO using HTML, CSS (Bootstrap) and hosted the page using Github Pages</p>
-					<p>&#8226; Instructor</p>
-					<p>&#8226; Photographer</p>
-				</li>
-				<li>
-					<h3>ACM, Manipal</h3>
-					<p>&#8226; Core committee member</br></p>
-				</li>
-			</ul>
-		</div>
-		<div id="empty"></div>
-
-		<div id="contact-me">
-			<h1>Contact Me</h1>
-			<h5>github/nishantsahoo</h5>
-			<h5>nishantsahoo.in@gmail.com</h5>
-			</ul>
-		</div>
-	</div>
-</div>
-</body>
+			</div> <!-- Main -->
+		</div> M=<!-- Page -->
+	</body>
 </html>
