--- a/index.html
+++ b/index.html
@@ -101,14 +101,15 @@
 							<p>&#8226; Summer training: Interned for 6-weeks under the IT department, where I learnt about the company's network technologies, and project management. I developed a Home Portal for the Engineering Division as my final project. </p>
 						</li>
 						<li>
-							<h3>CurioCity</h3>
+							<h3>Work at CurioCity</h3>
 							<p>&#8226; Web Developer: Built a website for the NGO using HTML, CSS (Bootstrap) and hosted the page using Github Pages</p>
 							<p>&#8226; Instructor</p>
 							<p>&#8226; Photographer</p>
 						</li>
 						<li>
-							<h3>ACM, Manipal</h3>
+							<h3>Work at ACM, Manipal</h3>
 							<p>&#8226; Core committee member</br></p>
+							<p>&#8226; Conducted a workshop on web scraping</br></p>
 						</li>
 					</ul>
 				</div> <!-- Experience -->
